fix wrapping buttons (#5419)

--- a/rsa-list-manager/app/styles/rsa-list-manager/components/_rsa-list-manager.scss
+++ b/rsa-list-manager/app/styles/rsa-list-manager/components/_rsa-list-manager.scss
@@ -1,4 +1,6 @@
 .list-manager {
+  display: inline-flex;
+
   .rsa-button-menu {
     ul {
       max-height: 11rem;
